<resources>
    <string name="app_name">Hodler</string>
    <string name="activity_overview">Overview</string>
    <string name="activity_trade">Trading</string>

    <string name="menu_open_website">Website</string>
    <string name="dashboard">Dashboard</string>
    <string name="refresh">Refresh</string>

    <string name="buy">Buy</string>
    <string name="sell">Sell</string>

    <string name="usd_symbol">USD</string>
    <string name="btc_symbol">BTC</string>
    <string name="eth_symbol">ETH</string>
    <string name="xrp_symbol">XRP</string>

    <string name="no_data">N/A</string>

    <string name="one_hour">1 H</string>
    <string name="one_day">1 D</string>
    <string name="one_week">1 W</string>
    <string name="one_month">1 M</string>
    <string name="three_months">3 M</string>
    <string name="six_months">6 M</string>
    <string name="one_year">1 Y</string>

    <string name="loading_text">Loading...</string>
</resources>
